--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ ul a:hover {
 .hero {
     display: flex;
     flex-direction: column;
-    background-image: url(/homepic1.jpg);
+    background-image: url(homepic1.jpg);
     min-height: 90vh;
     background-position: center;
     background-size: cover;
