--- a/style.css
+++ b/style.css
@@ -15,45 +15,114 @@ body {
 }
 
 /* navigation  */
-nav {
+.nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.menu-btn {
+    position: relative;
+    display: flex;
+    justify-content:flex-start; 
+    align-items: center;
+    margin-left: 1rem;
+    width: 80px;
+    height: 80px;
+    cursor: pointer;
+    /* border: 5px solid black; */
+    flex: 1 1 40rem;
+
+}
+
+.menubg {
+    width: 50px;
+    height: 6px;
+    background:black;
+    border-radius: 5px;
+}
+
+.menubg::before,
+.menubg::after {
+    content: '';
+    position: absolute;
+    width: 50px;
+    height: 6px;
+    background: black;
+    border-radius: 5px;;
+}
+.menubg::before {
+    transform: translateY(-16px);
+}
+
+.menubg::after {
+    transform: translateY(16px);
+}
+
+/* menu animation */
+.menu-btn.open .menubg {
+    transform: translateX(-50px);
+    background: transparent;
+    box-shadow: none;
+
+}
+
+.menu-btn.open .menubg::before {
+    transform: rotate(45deg) translate(35px, -35px);
+}
+
+.menu-btn.open .menubg::after {
+    transform: rotate(-45deg) translate(35px, 35px);
+}
+
+header nav {
     display: flex;
     min-height: 10vh;
-    margin: auto;
     width: 100%;
+    margin: auto;
     flex-direction: row;
-  
-    
+    display: none;
+   
 }
-nav ul { 
+
+.links.after {
     display: flex;
-    flex: 1 1 40rem;
+    min-height: 10vh;
+    width: 100%;
+    margin: auto;
     flex-direction: row;
-    justify-content: space-around;
-    margin: 2rem;
-    align-items: center;
-    padding: 0px 1rem 0px 1rem;
+}
+
+header nav ul {
+    display: flex;
+    flex-direction: row;
     font-family: 'Poppins', sans-serif;
     flex-wrap: wrap;
+    justify-content: space-around;
+    flex: 1 1 40rem;
+    align-items: center;
+    margin: 2rem;
+}
+.navigation li {
+    list-style: none;
+
+}
+
+
+
+.navigation a{
+    color: black;
+    text-decoration: none;
+    
     
 }
-  
 
-#logo{
-    flex: 1 1 2rem;
-}
-
-ul li {
-    list-style: none;
-}
-
-ul a  {
-   text-decoration: none; 
-   color: black;
-   font-family: 'Poppins', sans-serif;
-}
-
-ul a:hover {
+.navigation a:hover{
     color: green;
+}
+
+#logo {
+   
+    flex: 1 1 2rem;
 }
 
 
