--- a/about.css
+++ b/about.css
@@ -41,6 +41,14 @@ body {
 
 }
 
+.aboutlogo {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+}
+
+
 .menubg {
     width: 50px;
     height: 6px;
@@ -165,10 +173,39 @@ header nav ul {
     justify-content: center;
     align-content: center;
     padding: 2rem;
+    width: 100%;
+    height: 100%;
     
-    text-align: center;
+
     
   
+}
+
+#aboutbiopic1 {
+    flex: 1 1 20rem;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#aboutbtn {
+    padding: 15px 25px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: white;
+    background-color: black;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
+    width: 10rem;
+    text-align: center;
+}
+
+#aboutbtn:hover{
+    background-color: green;
 }
 
 .biotext {
@@ -183,12 +220,12 @@ header nav ul {
     /* this pushes the biotext div to the front of the plant */
     z-index: 1;
     overflow: hidden;
-   
-    
+ 
   
 }
 
-.biotext h1 {
+
+.biotext h3 {
     margin: 2rem;
 }
 
@@ -219,6 +256,48 @@ header nav ul {
 
 .plant2 {
     left: 40%;
+}
+
+/* footer  */
+.foot {
+    background-color: black;
+    display: flex;
+    color: white;
+    max-width: 100%;
+    flex-direction: row;
+    min-height: 10vh;
+    
+
+}
+
+.footerhead {
+    flex: 1 1 40rem;
+    padding: 1rem;
+    font-size: large;
+}
+
+.footerimages {
+    display: flex;
+    flex-direction: row;
+    flex: 1 1 40rem;
+    
+}
+#footericons {
+    
+    display: flex;
+    flex-direction: row;
+    flex: 1 1 40rem;
+    justify-content: flex-end;
+    list-style: none;
+    margin: auto;
+    padding: 1rem;
+}
+
+#footericons img {
+    width: 3rem;
+    height: 3rem;
+    margin:1rem
+
 }
 
 /* animations */
@@ -272,7 +351,58 @@ header nav ul {
        justify-content: space-evenly;
     }
 
+    .biotext {
+        margin: 0.5rem;
+        width: 100vh;
+
+        
+    }
+
+    .bio{
+    
+    }
+   
+    .foot {
+        width: auto;
+        object-fit: cover;
+    }
+
 } 
+
+@media screen and (max-width: 320px){
+    #footericons {
+    
+        display: flex;
+        flex-direction: row;
+        flex: 1 1 5rem;
+        justify-content: center;
+        list-style: none;
+        margin: auto;
+        padding: 1rem;
+        flex: wrap;
+    }
+    .footerhead {
+        flex: 1 1 10rem;
+        justify-content: center;
+        padding: 1rem;
+        font-size: large;
+        text-align: center;
+    }
+
+    .foot {
+        background-color: black;
+        background-size: cover;
+        display: flex;
+        color: white;
+        max-width: 100%;
+        flex-direction: row;
+        min-height: 10vh;
+        min-width: 70vh;
+        
+    
+    }
+}
+
 
 /* @media screen and (max-width: 842px) {
     .burger span{
