new updates again

--- a/style.css
+++ b/style.css
@@ -15,6 +15,13 @@ body {
 }
 
 /* navigation  */
+
+.aboutlogo {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+}
 .nav {
     display: flex;
     flex-direction: row;
