--- a/about.css
+++ b/about.css
@@ -22,6 +22,13 @@ body {
 
 /* navigation  */
 
+.fullnav {
+    position: sticky;
+    top: 0px;
+    background-color: white;
+    z-index: 2;
+}
+
 .nav {
     display: flex;
     flex-direction: row;
@@ -48,6 +55,9 @@ body {
     text-align: center;
 }
 
+#logo {
+    max-width: 20rem;
+}
 
 .menubg {
     width: 50px;
@@ -95,7 +105,7 @@ header nav {
     width: 100%;
     margin: auto;
     flex-direction: row;
-    display: none;
+    
    
 }
 
@@ -127,7 +137,8 @@ header nav ul {
 .navigation a{
     color: black;
     text-decoration: none;
-    
+    font-weight: bold;
+    text-transform: uppercase;
     
 }
 
@@ -141,12 +152,6 @@ header nav ul {
 }
 
 /* bio body  */
-#aboutbiopic1 {
-    flex: 1 1 20rem;
-    width: 20rem;
-    height: 20rem;
-    background:linear-gradient()
-}
 
 
 .bio {
@@ -182,6 +187,13 @@ header nav ul {
 }
 
 #aboutbiopic1 {
+    flex: 1 1 20rem;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#aboutbiopic2 {
     flex: 1 1 20rem;
     width: 100%;
     height: 100%;
@@ -365,6 +377,16 @@ header nav ul {
     .foot {
         width: auto;
         object-fit: cover;
+    }
+
+    header nav {
+        display: flex;
+        min-height: 10vh;
+        width: 100%;
+        margin: auto;
+        flex-direction: row;
+        display: none;
+       
     }
 
 } 
