--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    display: none;
 }
 .menu-btn {
     position: relative;
@@ -247,7 +248,7 @@ header nav ul {
     justify-content: center;
     text-align: center;
     align-content: center;
-    flex: 1 1;
+    flex: 1 1 90%;
     margin:auto;
 }
 
@@ -421,7 +422,11 @@ header nav ul {
 
 
 @media screen and (max-width: 932px) {
-
+    .nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
    
      nav  {
          display:flex;
