--- a/contact.css
+++ b/contact.css
@@ -1,4 +1,3 @@
-
 /* global tags */
 *{
     margin: 0px;
@@ -8,10 +7,17 @@
 }
 
 
+html {
+    /* creating a variable in CSS */
+    --background-color:#414141;
+    --gray-text: #525252;
+    --font-size: 2rem;
 
+}
 body {
     font-family: 'Poppins', sans-serif;
-    
+    animation: movedown 2s ease-in-out;
+    min-height: 100vh;
 }
 
 /* navigation  */
@@ -20,20 +26,9 @@ body {
     position: sticky;
     top: 0px;
     background-color: white;
-    z-index: 1;
-}
-.aboutlogo {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    text-align: center;
-    top: 0;
-    margin: 1rem;
+    z-index: 2;
 }
 
-#logo {
-    max-width: 20rem;
-}
 .nav {
     display: flex;
     flex-direction: row;
@@ -52,6 +47,17 @@ body {
     /* border: 5px solid black; */
     flex: 1 1 40rem;
 
+}
+
+.aboutlogo {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+}
+
+#logo {
+    max-width: 20rem;
 }
 
 .menubg {
@@ -135,7 +141,6 @@ header nav ul {
     font-weight: bold;
     text-transform: uppercase;
     
-    
 }
 
 .navigation a:hover{
@@ -147,138 +152,15 @@ header nav ul {
     flex: 1 1 2rem;
 }
 
-
-/* hero section  */
-.hero {
-    display: flex;
-    flex-direction: column;
-    background-image: url(homepic1.jpg);
-    min-height: 90vh;
-    background-position: center;
-    background-size: cover;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.hero h2 {
-    text-align: center;
-    color:gold;
-    
-}
-
-.bigtext h1 {
-    text-align: center;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    font-family: 'Poppins', sans-serif;
-}
-
-
-
-/* main content  */
-.planticons {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-content: center;
-    justify-content: space-around;
-    margin-bottom: 2rem;
-    
-}
-
-.planticons h2 {
-    font-family: 'Poppins', sans-serif;
-    
-}
-
-.planticons img {
-    width: 3rem;
-    height: 3rem;
-}
-
-#buybtn {
-   
-    padding: 15px 25px;
-    font-size: 24px;
-    cursor: pointer;
-    text-align: center;
-    text-decoration: none;
-    outline: none;
-    color: white;
-    background-color: black;
-    border: none;
-    border-radius: 15px;
-    box-shadow: 0 9px #999;
-    width: 10rem;
-}
-
-#buybtn:hover {
+.main1 {
     background-color: green;
-}
+    min-height: 70vh;
+    max-width: 100%;
 
-#button:active {
-    background-color:greenyellow;
-    box-shadow: 0 5px #666;
-    transform: translateY(4px);
-}
-
-
-.about-head {
-    background-color: black;
-    display: flex;
-    flex-direction: column;
-    text-align:center;
-    min-height: 10vh;
-    margin: 1rem;
-    color:white;
-    padding: 1rem;
-    flex: 1 1;
-}
-
-.aboutsection {
-    z-index: -1;
-}
-.cards {
-    display: flex;
-    flex-direction: row;
-    min-height: 40vh;
-    margin: 1rem;
-    width: 90%;
-    flex-wrap: wrap;
-    justify-content: center;
-    text-align: center;
-    align-content: center;
-    flex: 1 1 90%;
-    margin:auto;
-}
-
-.card {
- margin: 1rem;
- flex: 1 1 20rem;
- text-align: center;
- box-shadow: 0px 0px 10px rgb(0,0,0,0.1);
-
-}
-
-.card:hover {
-    transform: scale(1.1);
-}
-
-.card img {
-    width: 20rem;
-    height: 20rem;
-    flex: 1 1 20rem;
-    margin: 1rem;
-}
-
-.card p {
-    padding: 1rem;
-    text-align: center;
-    font-family: 'Poppins', sans-serif;
 }
 
 /* contact form */
-.formwrapper {
+.main1 {
     display: flex;
     flex-direction: column;
     margin: 1rem;
@@ -343,11 +225,8 @@ header nav ul {
 }
 
 /* privacy terms */
-
-/* privacy terms */
 .privacyterms {
     background-color: rgba(44, 159, 9, 0.2);
-    z-index: 1;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -374,9 +253,7 @@ header nav ul {
   cursor: pointer;  
 }
 
-.topfooter{
-    z-index: 0;
-}
+
 
 .privacytext{
     display: flex;
@@ -414,16 +291,8 @@ header nav ul {
 #acceptbtn:hover{
     background-color: rgba(199, 189, 82, 1);
 }
+
 /* footer  */
-
-.footertext {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    text-align: center;
-    margin-top: 1rem;
-}
-
 .foot {
     background-color: black;
     display: flex;
@@ -435,11 +304,7 @@ header nav ul {
 
 }
 
-.footerhead {
-    flex: 1 1 40rem;
-    padding: 1rem;
-    font-size: large;
-}
+
 
 .footerimages {
     display: flex;
@@ -465,42 +330,13 @@ header nav ul {
 
 }
 
-
-
-
-
-
-/* mobile responsive views */
-@media screen and (max-width:1032px) {
-    .planticons h2 {
-        font-family: 'Poppins', sans-serif;
-        font-size: 1rem;
-        margin-right: 1.5rem;
-    }
-    .contactfirst {
-        background-color: rgba(19,28,39, 0.8);
-        border-radius: 20px;
-    }
-   
-
+.footertext {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    margin-top: 1rem;
 }
-
-/* #formname {
-    width: 20rem;
-    height: 2rem;
-}
-
-#formemail {
-    width: 20rem;
-    height: 2rem;
-} */
-
-
-
-
-
-
-
 
 @media screen and (max-width: 932px) {
     .nav {
@@ -509,25 +345,41 @@ header nav ul {
         justify-content: space-between;
     }
    
-     nav  {
-         display:flex;
-         justify-content: center;
-        align-items: center;
-        margin-right: 2rem;
-        flex-direction: row;
-        flex-wrap: wrap;
-     }
-
-     nav ul {
+    nav  {
+        display:flex;
         justify-content: center;
-        align-items: center;
-        margin-right: 2rem;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-     }
+       align-items: center;
+       margin-right: 2rem;
+       flex-direction: row;
+       flex-wrap: wrap;
+    }
 
-     header nav {
+    nav ul {
+       justify-content: center;
+       align-items: center;
+       margin-right: 2rem;
+       flex-direction: row;
+       flex-wrap: wrap;
+       justify-content: space-evenly;
+    }
+
+    .biotext {
+        margin: 0.5rem;
+        width: 100vh;
+
+        
+    }
+
+    .bio{
+    
+    }
+   
+    .foot {
+        width: auto;
+        object-fit: cover;
+    }
+
+    header nav {
         display: flex;
         min-height: 10vh;
         width: 100%;
@@ -536,107 +388,15 @@ header nav ul {
         display: none;
        
     }
-    
-     .hero {
-         background-size: cover;
-         width: 100%;
-         height: auto;
-         background-position: right;
-         
-     }
-     .contactfirst {
-        background-color: rgba(19,28,39, 0.8);
-        border-radius: 20px;
-        width: 100%;
-        height: auto;
-        margin: auto;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        text-align: center;
 
-
-    }
-
-    .contacthead h1{
-        padding-top: 1rem;
-    }
-     
-    .name {
-       
-        margin: 1rem;
-       
-    }
-   
-    .email {
-        
-        margin: 1rem;
-        
-    }
-
-    .contact{
-        width: 100%;
-    }
-    
- 
-       
-
-}
-
-@media screen and (max-width: 768){
-    .contactfirst {
-        background-color: rgba(19,28,39, 0.8);
-        border-radius: 20px;
-        width: 100%;
-        height: auto;
-        margin: auto;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        text-align: center;
-
-
-    }
-
-    .contacthead h1{
-        padding-top: 1rem;
-    }
-     
-    .name {
-       
-        margin: 1rem;
-       
-    }
-   
-    .email {
-        
-        margin: 1rem;
-        
-    }
-
-    .contact{
-        width: 100%;
-    }
-    
-    #footericons img {
-        width: 1rem;
-        height: 1rem;
-        margin:1rem
-        
-    }
-    
-        
-       
-}
+} 
 
 @media screen and (max-width: 320px){
     #footericons {
     
         display: flex;
         flex-direction: row;
-        flex: 1 1 10rem;
+        flex: 1 1 5rem;
         justify-content: center;
         list-style: none;
         margin: auto;
@@ -659,6 +419,7 @@ header nav ul {
         max-width: 100%;
         flex-direction: row;
         min-height: 10vh;
+        min-width: 70vh;
         
     
     }
